org.mmisw.mmiorr.client
Carlos Rueda  -  MBARI
November 2009

2009-11-22
	- re-organized tests mainly to separate registration tests from the retrieval/comparison tests.
	- completed CIDEVDM-30 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-30
	- completed CIDEVDM-31 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-31
	- completed CIDEVDM-32 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-32
	  Note that this test is with a fully-hosted ontology, because the URI request also
	  accepts the "_versions" parameter to obtain the available versions.
	  The ORR could provide a more complete service including the ability to provide the
	  versions for any registered entry, perhaps even in an RDF format.

2009-11-20
	- completed CIDEVDM-42 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-42
	- jena libraries included for the comparison of models (using isIsomorphicWith)

2009-11-15
	- new MmiOrrTest, initially with preparations for test CIDEVDM-42
	
	
2009-11-14
	- Started this mini project to demonstrating interaction with MMI ORR
